--- a/team-a-page/package.json
+++ b/team-a-page/package.json
@@ -27,11 +27,8 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6"
-  },
-  "dependencies": {
-    "hoek": "^2.16.3",
-    "qs": "^2.4.2",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.10.1"
-  }
+  },
+  "dependencies": {}
 }
